syntax = "proto3";

package yandex.cloud.priv.cic.v1.inner.partner;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/cic/v1/inner/partner;cic";
option java_outer_classname = "CICPRT";


message Partner {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    UP = 1;
    DOWN = 2;
  }

  string id = 1;
  string cloud_id = 4;
  string folder_id = 5;
  string region_id = 6;
  Status status = 11;
}
